--- a/musica/DEFAULT.HTML
+++ b/musica/DEFAULT.HTML
@@ -5,12 +5,17 @@
 	$(document).ready(function(){
 		var miObj = [];		
 		var x = document.getElementById("player");
+		x.addEventListener(("ended"), function() {
+			$("#miBot").click();
+			x.play();
+		});
 		i = 0;
 		rutaAnt = '/MUSICA';
         miLI(rutaAnt);
 		var text="";
 			$("#miBot").click(function(){
 				 x.src = miObj.files[i];
+				 x.play();
 				 miLen = miObj.files.length;
 				 k = i + 1;
 				 $("#parrafo").text('['+ k +'/' + miLen + '] ' + miObj.files[i]);
@@ -48,7 +53,7 @@
 </head>
 
 <body>
-<audio id="player" controls autoplay>
+<audio id="player" controls>  //autoplay
 </audio><br>  
 <p id="parrafo">zxcv</p>
   <input type="submit" id="miBot" value=" > Next "><br><br>
